<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".nestedList.NestedListFragment">

    <Button
        android:id="@+id/test_toast_button"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/test_dialog_button"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:tag="show"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/test_toast_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nested_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/breed_detail_screen_fab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="37dp"
        android:src="@mipmap/baseline_arrow_forward_black_24"
        app:backgroundTint="#FFFFFF"
        app:borderWidth="0dp"
        app:elevation="5dp"
        app:fabCustomSize="50dp"
        app:fabSize="mini"
        app:layout_anchor="@id/cl"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="10dp"
        app:rippleColor="#a6a6a6" />
</androidx.constraintlayout.widget.ConstraintLayout>