<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:id="@+id/sub_breed_panel">
    <CheckBox
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/sub_breed_item_cb"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"/>
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_toRightOf="@id/sub_breed_item_cb">
        <ImageView
            android:id="@+id/sub_breed_item_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/sub_breed_item_tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="test"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>